# OpenixCLI

./: ARCHITECTURE.md  Cargo.toml  Cross.toml  README.md
.github/workflows/: release.yml
scripts/: build-rpm.js
src/: cli.rs  lib.rs  main.rs
src/commands/: flash.rs  inspect.rs  mod.rs  types.rs  unpack.rs
src/config/: boot_header.rs  mod.rs  partition.rs
src/firmware/: image_data.rs  loaded.rs  mod.rs  packer.rs  sparse.rs  types.rs
src/flash/: events.rs  fes_handler.rs  mod.rs  progress.rs  request.rs
src/flash/fel_handler/: dram_init.rs  mod.rs  uboot_download.rs
src/flash/fes_handler/: boot_download.rs  erase_flag.rs  mbr_download.rs  mod.rs  partition_download.rs  partition_planner.rs  types.rs  ubifs_config.rs
src/flash/fes_handler/partition/: mod.rs  mod_impl.rs  raw_download.rs  sparse_parser.rs
src/process/: global_progress.rs  mod.rs  reporter.rs  stages.rs
src/tui/: app.rs  bridge.rs  event.rs
src/tui/widgets/: firmware_info.rs
src/utils/: logger.rs  mod.rs  terminal.rs
