[package]
name = "openixcli"
version = "0.1.7"
edition = "2021"
description = "Tools for flash Allwinner Firmware to Devices."
license = "MIT"
authors = ["YuzukiTsuru"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
anyhow = "1.0"
indicatif = "0.18"
colored = "3.0"
byteorder = "1.5"
memmap2 = "0.9"
once_cell = "1.19"
ratatui = "0.30"
crossterm = "0.29"

[dependencies.libefex]
git = "https://github.com/YuzukiTsuru/libefex"

[[bin]]
name = "openixcli"
path = "src/main.rs"

# DEB package metadata
[package.metadata.deb]
depends = "libusb-1.0-0 (>= 1.0.0)"

# RPM package metadata (cargo-generate-rpm)
[package.metadata.generate-rpm]
assets = [
  { source = "target/release/openixcli", dest = "/usr/bin/openixcli", mode = "755" }
]

# Release profile tuned for small binary size.
# - opt-level "z": optimize for size
# - lto + codegen-units 1: cross-crate dead-code elimination
# - strip: drop symbols/debug info
# - panic "abort": no unwind tables
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
